# frida-rust-java-bridge

./: .envrc  .gitignore  AGENTS.md  CLEANUP_AUDIT.md  CURRENT_BEHAVIOR.md  Cargo.toml  DOCS_PROGRESS.md  DOCUMENTATION_PASS.md  ERGONOMICS_GAPS.md  FEATURE_PROGRESS.md  FINALIZATION_PLAN.md  HARDENING_AUDIT.md  LICENSE-MIT  README.md  ROADMAP.md  SECOND_OPINION_CLEANUP_AUDIT.md  SECOND_OPINION_CLEANUP_AUDIT2.md  SECOND_OPINION_CLEANUP_PASS.md  TESTING.md  V1_CONTRACTS.md  build.rs  justfile
.agents/: CURRENT_BEHAVIOR.md  FEATURE_PROGRESS.md  REVIEWS.md  ROADMAP_OLD.md
.cargo/: config.toml
.github/workflows/: deploy-docs.yml
crates/art-selftest-cdylib/: Cargo.toml
examples/: android_system_services.rs  basic_blocking.rs  basic_perform.rs  constructors_and_overloads.rs  frida_js_ergonomics_probe.rs  main_thread.rs  metadata_and_enumeration.rs  method_replacement.rs  raw_jni_slots.rs
smoke-fixtures/dex/: classes.dex
src/: android.rs  apk_perform_test.rs  app_process_smoke.rs  app_process_test.rs  art.rs  capabilities.rs  coercion.rs  env.rs  error.rs  experimental.rs  java.rs  jni.rs  lib.rs  loader.rs  metadata.rs  method_query.rs  modifiers.rs  native.rs  refs.rs  runtime.rs  signature.rs  value.rs  vm.rs
src/app_process_smoke/: assertions.rs  checks.rs  replacement_callbacks.rs  replacement_checks.rs  replacement_lifecycle.rs
src/app_process_test/: app_loader_checks.rs  assertions.rs  checks.rs  replacement_callbacks.rs  replacement_checks.rs  replacement_lifecycle.rs
src/art/: backend.rs  capabilities.rs  deoptimization.rs  enumeration.rs  features.rs  layout.rs  memory.rs  mod.rs  replacement.rs  resolution.rs  strings.rs  (+8 more)
tests/: art_bootstrap.rs
(+107 files in other folders)
