[package]
name = "frida-rust-java-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[test]]
name = "art_bootstrap"
harness = false

[features]
default = []
app-process-test = []
apk-perform-test = []

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
static_assertions = "1.1.0"

[target.'cfg(target_os = "android")'.dependencies]
frida-gum = { version = "0.17.2", features = ["auto-download", "std", "invocation-listener"] }
frida-gum-sys = { version = "0.17.2", features = ["auto-download"] }
